[gd_scene load_steps=8 format=2]

[ext_resource path="res://scn/scenes/popup_user/PopupUser.gd" type="Script" id=1]
[ext_resource path="res://supabase-ui/basic/button/text/TextButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/imgs/icons/close_white_36dp.svg" type="Texture" id=3]
[ext_resource path="res://res/imgs/icons/manage_accounts_white_36dp.svg" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=2]
resource_local_to_scene = true
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0 )
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.0392157 )
shadow_offset = Vector2( 0, 1.5 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
resource_local_to_scene = true
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 1, 1, 0 )
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color( 0, 0, 0, 0.0392157 )
shadow_offset = Vector2( 0, 1.5 )
anti_aliasing = false

[node name="PopupUser" type="PopupPanel"]
margin_right = 146.0
margin_bottom = 74.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = -6.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateBtn" parent="Buttons" instance=ExtResource( 2 )]
margin_right = 130.0
margin_bottom = 31.0
custom_styles/panel = SubResource( 2 )
icon_enabled = true
texture = ExtResource( 4 )
expand = true
size = Vector2( 20, 20 )
text = "Update User"

[node name="LogoutBtn" parent="Buttons" instance=ExtResource( 2 )]
margin_top = 31.0
margin_right = 130.0
margin_bottom = 62.0
custom_styles/panel = SubResource( 3 )
icon_enabled = true
texture = ExtResource( 3 )
expand = true
size = Vector2( 16, 16 )
text = "Logout"

[connection signal="pressed" from="Buttons/UpdateBtn" to="." method="_on_UpdateBtn_pressed"]
[connection signal="pressed" from="Buttons/LogoutBtn" to="." method="_on_LogoutBtn_pressed"]
